# rabbit-queue-manager

./: README.md  TEST_README.md  examples.py  main.py  pyproject.toml  rabbit_manager.py  rabbit_queue_manager.py  test.py
rabbit_manager/: __init__.py
