[project]
name = "rabbit-queue-manager"
version = "0.1.0"
description = "Simple rabbitmq broker manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pika>=1.3.2",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
